--- a/src/app/bussines/sidebar/sidebar.component.html
+++ b/src/app/bussines/sidebar/sidebar.component.html
@@ -1,88 +1,88 @@
-<div class="fixed w-64 bg-green-100 border-r border-gray-200 h-screen flex flex-col">
+<div class="fixed w-64 bg-blue-100 border-r border-blue-200 h-screen flex flex-col">
   <!-- Encabezado de la barra lateral -->
-  <div class="px-6 py-4 bg-green-400">
-    <h2 class="text-lg font-semibold text-green-950">PANEL-ADM</h2>
+  <div class="px-6 py-4 bg-blue-400">
+    <h2 class="text-lg font-semibold text-blue-950">PANEL-ADM</h2>
   </div>
 
   <!-- Sección de enlaces del panel -->
   <div class="flex-1 overflow-y-auto">
-    <h2 class="text-lg font-semibold text-gray-700 ml-5">Panel</h2>
+    <h2 class="text-lg font-semibold text-blue-700 ml-5">Panel</h2>
     <div class="px-4 py-6 ">
       <ul>
-        <button routerLink="/dashboard" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/dashboard" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-home pr-4"></i>
             Dashboard
           </a>
         </button>
-        <button routerLink="/usuario" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/usuario" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-user pr-4"></i>
             Usuarios
           </a>
         </button>
-        <button routerLink="/emprendimiento" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/emprendimiento" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-lightbulb pr-4"></i>
             Emprendimiento
           </a>
         </button>
-        <button routerLink="/roles" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/roles" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-users-cog pr-4"></i>
             Roles
           </a>
         </button>
-        <button routerLink="/permisos" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/permisos" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-user-shield pr-4"></i>
             Permisos
           </a>
         </button>
-        <button routerLink="/paquetes" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/paquetes" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-file-alt pr-4"></i>
             Paquetes Turisticos
           </a>
         </button>
-        <button routerLink="/lugares-turisticos" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/lugares-turisticos" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-map-marker-alt pr-4"></i>
             Lugares Turísticos
           </a>
         </button>
-        <button routerLink="/servicios" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/servicios" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-map-marker-alt pr-4"></i>
             Servicios
           </a>
         </button>
-        <button routerLink="/tipos-servicio" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/tipos-servicio" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-cogs pr-4"></i>
             Tipos de Servicio
           </a>
         </button>
-        <button routerLink="/disponibilidad" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/disponibilidad" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-map-marker-alt pr-4"></i>
             Disponibilidad
           </a>
         </button>
-        <button routerLink="/sliders" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/sliders" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-box pr-4"></i>
             Sliders
           </a>
         </button>
-        <button routerLink="/reserva" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/reserva" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-comment pr-4"></i>
             Reservas
           </a>
         </button>
-        <button routerLink="/dashboard" routerLinkActive="bg-green-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-gray-700 hover:text-green-600 flex items-center text-lg">
+        <button routerLink="/dashboard" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-star pr-4"></i>
             Valoraciones
           </a>
@@ -92,20 +92,21 @@
   </div>
 
   <!-- Pie de la barra lateral -->
-  <div class="px-4 py-6 mt-auto  bg-green-100">
+<div class="px-4 py-6 mt-auto bg-blue-100 border-t-4 border-blue-500">
+
     <ul>
       <li class="mb-4">
-        <button routerLink="/configuraciones" class="text-gray-700 hover:text-green-600 text-lg">
+        <button routerLink="/configuraciones" class="text-blue-700 hover:text-blue-600 text-lg">
           <i class="fas fa-cogs pr-5"></i>Configuración
         </button>
       </li>
       <li class="mb-4">
-        <button href="#" class="text-gray-700 hover:text-green-600 text-lg">
+        <button href="#" class="text-blue-700 hover:text-blue-600 text-lg">
           <i class="fas fa-user pr-5"></i>Ayuda
         </button>
       </li>
       <li>
-        <button (click)="logout()" class="text-gray-700 hover:text-green-600 text-lg">
+        <button (click)="logout()" class="text-blue-700 hover:text-blue-600 text-lg">
           <i class="fa-solid fa-right-from-bracket pr-5"></i>Cerrar Sesión
         </button>
       </li>
