--- a/src/app/bussines/sidebar/sidebar.component.html
+++ b/src/app/bussines/sidebar/sidebar.component.html
@@ -9,82 +9,35 @@
     <h2 class="text-lg font-semibold text-blue-700 ml-5">Panel</h2>
     <div class="px-4 py-6 ">
       <ul>
-        <button routerLink="/dashboard" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+        <button routerLink="/dashboard/principal" routerLinkActive="bg-blue-400"
+          class="mb-4 p-1 rounded-lg w-full hover:bg-blue-300">
           <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-home pr-4"></i>
             Dashboard
           </a>
         </button>
-        <button routerLink="/usuario" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+        <button routerLink="/dashboard/tipos" routerLinkActive="bg-blue-400"
+          class="mb-4 p-1 rounded-lg w-full hover:bg-blue-300">
           <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-user pr-4"></i>
-            Usuarios
+            Tipos
           </a>
         </button>
-        <button routerLink="/emprendimiento" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
+        <ng-container *ngFor="let tipo of tipos">
+          <button [routerLink]="['/dashboard/contenido', tipo.id]" routerLinkActive="bg-blue-400"
+            (click)="refreshData(tipo.id)"
+            class="mb-4 p-1 text-lg rounded-lg w-full  hover:bg-blue-300 text-blue-900 transition text-start">
+            <div class="pl-7 text-blue-700">
+              {{ tipo.nombre }}
+            </div>
+          </button>
+        </ng-container>
+
+        <button routerLink="/emprendimiento" routerLinkActive="bg-blue-400"
+          class="mb-4 p-1 rounded-lg w-full hover:bg-blue-300">
           <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
             <i class="fas fa-lightbulb pr-4"></i>
             Emprendimiento
-          </a>
-        </button>
-        <button routerLink="/roles" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-users-cog pr-4"></i>
-            Roles
-          </a>
-        </button>
-        <button routerLink="/permisos" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-user-shield pr-4"></i>
-            Permisos
-          </a>
-        </button>
-        <button routerLink="/paquetes" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-file-alt pr-4"></i>
-            Paquetes Turisticos
-          </a>
-        </button>
-        <button routerLink="/lugares-turisticos" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-map-marker-alt pr-4"></i>
-            Lugares Turísticos
-          </a>
-        </button>
-        <button routerLink="/servicios" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-map-marker-alt pr-4"></i>
-            Servicios
-          </a>
-        </button>
-        <button routerLink="/tipos-servicio" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-cogs pr-4"></i>
-            Tipos de Servicio
-          </a>
-        </button>
-        <button routerLink="/disponibilidad" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-map-marker-alt pr-4"></i>
-            Disponibilidad
-          </a>
-        </button>
-        <button routerLink="/sliders" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-box pr-4"></i>
-            Sliders
-          </a>
-        </button>
-        <button routerLink="/reserva" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-comment pr-4"></i>
-            Reservas
-          </a>
-        </button>
-        <button routerLink="/dashboard" routerLinkActive="bg-blue-400" class="mb-4 p-1 rounded-lg w-full">
-          <a class="text-blue-700 hover:text-blue-600 flex items-center text-lg">
-            <i class="fas fa-star pr-4"></i>
-            Valoraciones
           </a>
         </button>
       </ul>
@@ -92,7 +45,7 @@
   </div>
 
   <!-- Pie de la barra lateral -->
-<div class="px-4 py-6 mt-auto bg-blue-100 border-t-4 border-blue-500">
+  <div class="px-4 py-6 mt-auto bg-blue-100 border-t-4 border-blue-500">
 
     <ul>
       <li class="mb-4">
